--- a/07-Exam Prep/03. Form/service-estimate.html
+++ b/07-Exam Prep/03. Form/service-estimate.html
@@ -7,18 +7,15 @@
     <link rel="stylesheet" type="text/css" href="service-estimate.css">
 </head>
 
-<body>
+<body onload="renderForm()">
     <main>
-        <div id="header-ctr">
-
-        </div>
-        <form>
-
-        </form>
-        <section class="after-success hidden">
-
-        </section>
+        <div id="header-ctr"> </div>
+        <form> </form>
+        <section class="after-success hidden"> </section>
     </main>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
