--- a/07-Exam Prep/01. BeatsLandingPage/beats.html
+++ b/07-Exam Prep/01. BeatsLandingPage/beats.html
@@ -32,29 +32,28 @@
 
     <main>
         <section class="product">
-            <div class="product-details">
+            <article class="product-details">
                 <h2 class="product-name">solo wireless</h2>
                 <p class="product-description">With up to 40 hours of battery life, Beats Solo Wireless is your perfect everyday headphone. Get the most
                     out of your music with an award-winning, emotionally charged Beats listening experience.</p>
                 <a href="#" class="button">view more</a>
-            </div>
-            <div class="product-image">
+            </article>
+            <article class="product-image">
                 <img src="img/beats-landing-main.jpg" alt="beats-landing-main">
-            </div>
+            </article>
         </section>
 
         <section class="product right">
-            <div class="product-image">
+            <article class="product-image">
                 <img src="img/powerbeats.png" alt="powerbeats">
-            </div>
-            <div class="product-details">
+            </article>
+            <article class="product-details">
                 <h2 class="product-name">powerbeats</h2>
                 <p class="product-features">
                     <strong>performance</strong>
                     <span>power</span>
                     <span>freedom</span>
                 </p>
-                <h3></h3>
                 <p class="product-description">Powerbeats3 earphones are ready for any challenge with up to 12 hours of battery life to fuel multiple long
                     workouts and powerful, dynamic sound to keep you pushing.</p>
                 <div class="product-offer">
@@ -63,7 +62,7 @@
                     </p>
                     <a href="#" class="button">buy now</a>
                 </div>
-            </div>
+            </article>
         </section>
     </main>
 </body>
